# codelab-ai

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  README.md
codelab/: .env.example  README.md  codelab.toml.example  pyproject.toml
codelab/src/codelab/: cli.py
codelab/tests/: conftest.py
codelab/tests/client/: test_acp_transport_service.py  test_concurrent_receive_calls.py  test_dishka_di_container.py  test_file_system_executor.py  test_file_system_handler.py  test_infrastructure_message_parser.py  test_infrastructure_plugins_manager.py  test_logging.py  test_mcp_servers_integration.py  test_messages.py  test_permission_handler_direct_lifecycle.py  test_presentation_base_view_model.py  test_presentation_chat_view_model.py  test_terminal_executor.py  test_terminal_handler.py  test_tui_action_bar.py  test_tui_config.py  test_tui_config_timeout.py  test_tui_permission_request.py  test_tui_session_components.py
codelab/tests/server/: conftest.py  factories.py  mcp_test_server.py  test_agent_orchestrator.py  test_client_rpc_bridge_terminal_output.py  test_client_rpc_service.py  test_client_rpc_service_integration.py  test_conformance.py  test_double_cache_fix.py  test_end_to_end_with_storage.py  test_extensibility.py  test_full_session_lifecycle.py  test_global_policy_integration.py  test_global_policy_manager.py  test_history_persistence_and_replay.py  test_http_server.py  test_http_server_stage6.py  test_mcp_integration.py  test_mcp_module.py  test_naive_agent.py  test_openai_message_history.py  test_pending_registry.py  test_permission_flow.py  test_permission_response_handling.py  test_prompt_directives.py  (+14 more)
(+270 files in other folders)
