[project]
name = "codelab"
version = "0.1.0"
description = "Unified ACP implementation - agent server and client in one package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11.0",
  "websockets>=12.0",
  "aiofiles>=24.1.0",
  "aiohttp>=3.12.15",
  "tomli>=2.0.0",
  "structlog>=24.1.0",
  "rich>=13.0.0",
  "python-dotenv>=1.0.0",
  "openai>=1.50.0",
  "textual>=0.66.0",
  "textual-serve>=1.1.0",
  "dishka>=1.10.1",
]

[project.scripts]
codelab = "codelab.cli:main"

[project.optional-dependencies]
server = [
  "openai>=1.50.0",
  "anthropic>=0.20",
  "mcp>=1.9.4",
]
tui = [
  "textual>=0.40",
]
web = [
  "textual-serve>=1.1.0",
]
full = [
  "codelab[server,tui,web]",
]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.4",
  "ty>=0.0.1a11",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codelab"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
# Игнорируем ошибки связанные с внешними библиотеками и динамическим кодом
"no-matching-overload" = "ignore"
"unknown-argument" = "ignore"
"missing-argument" = "ignore"
"unresolved-attribute" = "ignore"

[tool.pytest.ini_options]
pythonpath = ["src", "tests/server"]
testpaths = ["tests"]
asyncio_mode = "auto"
